potential fix for flipping cards on ios

--- a/src/views/flipCard.scss
+++ b/src/views/flipCard.scss
@@ -4,6 +4,8 @@
   position: relative;
   max-width: 15rem;
   margin: 1rem auto;
+  z-index: 0;
+  transform: translateZ(100px);
   .card_head {
     counter-increment: card-number;
     position: absolute;
